# iceberg_sim

./: CMakeList.txt  CMakeLists.txt  README.md  package.xml
launch/: wildthumper_empty_world.launch.py
launch/robots/: iceberg_wildthumper.launch.py
models/iceberg_wildthumper/: model.config  model.sdf
worlds/: wildthumper_empty_world.sdf  wildthumper_test_world.sdf
